# Medical_Prescription

./: .env_example  .gitignore  LICENSE  Makefile  README.md  deploy.bat  deploy.sh  logging.conf  pyproject.toml  run.bat
data/: README.md  Synonyms.xlsx  ~$Synonyms.xlsx
src/: main.py
src/core/services/gemini/: client.py  gemini.py  models.py  processor.py  test_connection.py
src/core/services/image/: __init__.py  optimize_image.py  preprocessing.py  process_prescription_image.py  validate_image.py
src/core/services/neo4j/: get_drug_info.py  parallel_search_orchestrator.py  queries.py  rxnorm_rag_service.py
src/core/services/neo4j/brand_search/: queries.py  search.py
src/core/services/neo4j/embedding_search/: queries.py  search.py
src/core/services/neo4j/exact_match_search/: queries.py  search.py
src/core/services/neo4j/fuzzy_match_search/: queries.py  search.py
src/core/services/neo4j/instruction_search/: queries.py  search.py
src/core/services/neo4j/orchestrator/: calculate_scores.py  deduplicate_and_merge_results.py  parallel_search.py  parallel_search_orchestrator.py
src/core/services/neo4j/search/: driver.py  run_query.py
src/core/services/neo4j/search/brand_search/: methods.py  queries.py  search.py
src/core/services/neo4j/search/embedding_search/: methods.py  queries.py  search.py  service.py
src/core/services/neo4j/search/exact_match_search/: methods.py  queries.py  search.py
src/core/services/neo4j/search/fuzzy_match_search/: methods.py  queries.py  search.py
src/core/services/neo4j/search/instruction_search/: methods.py  queries.py  search.py  service.py
src/core/services/neo4j/search/strength_instruction_search/: methods.py  queries.py  search.py  service.py
src/core/services/neo4j/search/synonym_search/: methods.py  queries.py  search.py  service.py
src/core/services/neo4j/strength_instruction_search/: queries.py  search.py
src/core/services/neo4j/synonym_search/: queries.py  search.py
src/core/services/neo4j/test_connection/: queries.py  test_connection.py
src/core/settings/: config.py  logging.py  observability.py  threading.py
src/modules/ai_agents/clinical_safety_agent/: agent.py  prompts.py  tools.py
src/modules/ai_agents/drug_selector_agent/: agent.py  prompts.py  tools.py
src/modules/ai_agents/drugs_agent/: agent.py  prompts.py  tools.py
src/modules/ai_agents/drugs_validation_agent/: agent.py  prompts.py  tools.py
src/modules/ai_agents/hallucination_detection_agent/: agent.py  prompts.py  tools.py
src/modules/ai_agents/hallucination_detection_agent-unused/: agent.py  tools.py
src/modules/ai_agents/image_extractor_agent/: agent.py  prompts.py  tools.py
src/modules/ai_agents/instructions_of_use_agent/: agent.py  prompts.py  tools.py
src/modules/ai_agents/instructions_of_use_validation_agent/: agent.py  prompts.py  tools.py
src/modules/ai_agents/parse_drug_components/: agent.py  prompts.py
src/modules/ai_agents/patient_info_agent/: agent.py  prompts.py  tools.py
src/modules/ai_agents/patient_info_validation_agent/: agent.py  prompts.py
src/modules/ai_agents/patient_info_validation_agent-unused/: agent.py  prompts.py
src/modules/ai_agents/patient_prescriber_info_agent/: agent.py  prompts.py  tools.py
src/modules/ai_agents/prescriber_agent/: agent.py  prompts.py  tools.py
src/modules/ai_agents/prescriber_validation_agent/: agent.py  prompts.py
src/modules/ai_agents/prescriber_validation_agent-unused/: agent.py
src/modules/ai_agents/tools/: langchain_tools.py
src/modules/ai_agents/translate_to_spanish_agent/: agent.py  prompts.py
src/modules/ai_agents/translate_to_spanish_agent-unused/: agent.py  prompts.py
src/modules/ai_agents/utils/: agent_scratchpad.py  base_agent.py  common_tools.py  json_parser.py  json_utils.py  json_validator.py
src/modules/ai_agents/workflow/: WorkflowState.py  __init__.py  builder.py  langchain_nodes.py  langchain_orchestrator.py  orchestrator.py  streamlined_orchestrator.py
src/modules/prescriptions_management/: handlers.py  router.py  schema.py  services.py  system_prompts.py
src/modules/system_health_management/: handlers.py  router.py  schema.py  services.py
